[gd_scene load_steps=8 format=3 uid="uid://crlxihydew4my"]

[ext_resource type="Script" path="res://scenes/components/character/attack_component.gd" id="1_i3vph"]
[ext_resource type="AudioStream" uid="uid://bmgsdy5y5tjqe" path="res://assets/sounds/blunt1.mp3" id="2_ydqlb"]
[ext_resource type="AudioStream" uid="uid://cg7sfxhc05nn4" path="res://assets/sounds/blunt2.mp3" id="3_qlndu"]
[ext_resource type="AudioStream" uid="uid://d24u3yl0grr5w" path="res://assets/sounds/blunt3.mp3" id="4_ry66v"]
[ext_resource type="AudioStream" uid="uid://cris5jkmmy5xj" path="res://assets/sounds/blade1.mp3" id="5_ue1y8"]
[ext_resource type="AudioStream" uid="uid://dt1jva78ynu5b" path="res://assets/sounds/blade2.mp3" id="6_58f5p"]
[ext_resource type="AudioStream" uid="uid://c385uafqq2arq" path="res://assets/sounds/bladetrinity.mp3" id="7_axnua"]

[node name="AttackComponent" type="Node"]
script = ExtResource("1_i3vph")

[node name="Blunt1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_ydqlb")
bus = &"FX"

[node name="Blunt2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qlndu")
bus = &"FX"

[node name="Blunt3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ry66v")
bus = &"FX"

[node name="Blade1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_ue1y8")
bus = &"FX"

[node name="Blade2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_58f5p")
bus = &"FX"

[node name="Blade3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_axnua")
bus = &"FX"
